Fixed spacing of projects page

--- a/styles/Components.module.css
+++ b/styles/Components.module.css
@@ -27,6 +27,7 @@
 .projectinfocontainer {
   padding-top: 2vh;
   padding-left: 8vw;
+  padding-bottom: 2vh;
 }
 
 .displayprojectcontainer {
