--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -30,7 +30,6 @@
 
 .projectdetailcontainer {
   margin-top: 4vh;
-  padding-top: 4vh;
   margin-bottom: 2vh;
   padding-bottom: 2vh;
   border-style: solid;
